Bug 313504: style: prefer QString::isEmpty() over a "null compare"

style: prefer QString::isEmpty() over a "null compare"

See:
http://www.englishbreakfastnetwork.org/krazy/reports/extragear/multimedia/amarok/index.html
[...]
21. Check for compares to QString::null or QString() [nullstrcompare]...OOPS! 2 issues found!

src/dialogs/TrackOrganizer.cpp: line# 83 (1)
src/playlistgenerator/PresetModel.cpp: line# 161 (1)
[...]

REVIEW: 112140
BUG: 313504